--- a/index.html
+++ b/index.html
@@ -4,24 +4,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NewYearNewMe</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <header></header>
-    <main>
 
+    <main>
         <section>
-            <div class="contact-us">
-                <h1 class="contact-us-title">All Thinks Are <br> Possible If You <br> believe</h1>
-            <p class="contact-us-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-            <button class="btn-primary">Contact Us</button>
+            <div class="contact-us-info">
+                <h1 class="title">ALL THINKS ARE <br> POSSIBLE IF YOU <br>believe</h1>
+                <p class="contact-des">There are many variations of passages of
+                    Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or
+                    randomised words</p>
+                <button class="btn">contact us</button>
+
             </div>
         </section>
 
+        <section class="failur">
+            <div class="failur-container">
+                <div class="my-img">
+                    <img src="./images/person.png" alt="">
+                </div>
+                <div class="failur-description">
+                    <h3 class="failur-title">My failures of <br> previous year</h3>
+                    <p class="failur-list">Contrary to popular belief, Lorem Ipsum is not simply random text. It has
+                        roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                        Richard McClintock.
+                    </p>
+                    <ul class="failur-list">
+                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 20"
+                                fill="none">
+                                <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>Contrary to popular belief, is not simply.</li>
+                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 20"
+                                fill="none">
+                                <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>Contrary to popular simply.</li>
+                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 20"
+                                fill="none">
+                                <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>Contrary to popular belief, is not simply.</li>
+                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 20"
+                                fill="none">
+                                <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>Contrary to popular simply.</li>
+                        <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 20"
+                                fill="none">
+                                <path d="M20 6L9 17L4 12" stroke="#16D887" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>Contrary to popular simply.</li>
+                    </ul>
+
+
+                </div>
+            </div>
+        </section>
+
+        <section class="plan-section">
+            <h3 class="plan-title">My plans</h3>
+            <div class="plnas-container">
+                <div class="plan">
+                    <img src="./images/icons/web.png" alt="">
+                    <h2 class="plan-name">
+                        Web Development
+                    </h2>
+                    <h3>I want to start</h3>
+                    </img>
+                </div>
+                <div class="plan">
+                    <img src="./images/icons/js.png" alt="" class="plan-img">
+                    <h2 class="plan-name">
+                        Javascript
+                    </h2>
+                    <h3>I want to start</h3>
+                    </img>
+                </div>
+                <div class="plan">
+                    <img src="./images/icons/smoke.png" alt="">
+                    <h2 class="plan-name">
+                        Smoking Habit
+                    </h2>
+                    <h3>I want to start</h3>
+                    </img>
+                </div>
+                <div class="plan">
+                    <img src="./images/icons/ecom.png" alt="">
+                    <h2 class="plan-name">
+                        ecommerce
+                    </h2>
+                    <h3>I want to start</h3>
+                    </img>
+                </div>
+            </div>
+        </section>
+
+        <section class="plan-section call-section">
+            <h2 class="call-title">Awlays keep a positive <br> mindset</h2>
+            <button class="btn btn-call">Call Now</button>
+        </section>
+
     </main>
-    <footer></footer>
+
 </body>
 
 </html>
