--- a/index.html
+++ b/index.html
@@ -109,7 +109,21 @@
             <h2 class="call-title">Awlays keep a positive <br> mindset</h2>
             <button class="btn btn-call">Call Now</button>
         </section>
-
+        <footer>
+            <div class="footer-container">
+                <div class="footer-col-1">
+                    <h3>Future</h3>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                    <p>Email : info@gmail.com</p>
+                    <p>Phone : 01500 00 00 00</p>
+                </div>
+                <div class="footer-col-2">
+                    <h4></h4>
+                    <input type="text" placeholder="">
+                    <button class="btn btn-call">Subscribe</button>
+                </div>
+            </div>
+        </footer>
     </main>
 
 </body>
